syntax = "proto3";

package astria.protocol.transaction.v1;

// `RecoverIbcClient` represents a transaction that recovers an IBC client
// by updating the client located at `client_id` with the client
// located at `replacement_client_id`.
//
// `client_id` must not be active, and `replacement_client_id` must be
// active.
//
// This is based on https://buf.build/cosmos/ibc/docs/main:ibc.core.client.v1#ibc.core.client.v1.MsgRecoverClient
// Although the field names are different, the first two fields are
// still wire-compatible.
message RecoverIbcClient {
  // the client identifier for the client to be updated
  string client_id = 1;
  // the substitute client identifier for the client which will replace the subject
  // client
  string replacement_client_id = 2;
}
